<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">World Wonders</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Name</string>
    <string name="title_activity_world_wonders">WorldWondersActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wonder_detail">WonderDetailActivity</string>
    <string name="boomark">Bookmark</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>

</resources>