<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ciandt.worldwonders.activity.WonderDetailActivity">


    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/bookmark" android:title="@string/boomark"
        android:orderInCategory="1" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_bookmark_white_24dp"/>

    <item android:id="@+id/share" android:title="@string/share"
        android:orderInCategory="2" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"/>

    <item android:id="@+id/directions" android:title="@string/directions"
        android:orderInCategory="3" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_directions_white_24dp"/>

</menu>
